--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: mb_button
-description: A new button which requires d
+description: A new button which requires only few changes to get your desired button
 version: 0.0.1
 author: Mouli Bheemaneti <moulibheemaneti99@gmail.com>
 homepage: https://github.com/moulibheemaneti/mb_button.git
