--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: mb_button
-description: A new button which requires only few changes to get your desired button.
+description: A new button which requires only few arguments to get your desired button.
 
 #author: Mouli Bheemaneti <moulibheemaneti99@gmail.com>
 homepage: https://github.com/moulibheemaneti/mb_button.git
@@ -14,7 +14,7 @@ homepage: https://github.com/moulibheemaneti/mb_button.git
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.2
+version: 1.0.3
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -30,7 +30,7 @@ dependencies:
     sdk: flutter
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.3
+  # cupertino_icons: ^1.0.3
 
 dev_dependencies:
   flutter_test:
