--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,17 +6,17 @@ homepage: https://github.com/moulibheemaneti/mb_button.git
 
 repository: https://github.com/moulibheemaneti/mb_button.git
 
-version: 1.0.5
+version: 3.0.0
 
 environment:
-  sdk: '>=2.18.2 <3.0.0'
+  sdk: ^3.10.7
 
 dependencies:
   flutter:
     sdk: flutter
 
 dev_dependencies:
-  flutter_lints: ^2.0.1
+  flutter_lints: ^6.0.0
 
 flutter:
   uses-material-design: true
